# coyote-aurora

./: .envrc  .gitignore  README.md  flake.nix
hw/: CMakeLists.txt
hw/src/: vfpga_top.svh
sw/: CMakeLists.txt
sw/src/: main.cpp
